# BPC

./: .gitignore  README.md  pyproject.toml
configs/: job_call_link_test.yml  jobs_021226.yml  jobs_022626.yml  jobs_022626_crt_test.yml  jobs_030526.yml  jobs_031226.yml  jobs_031926.yml  jobs_032626.yml  jobs_032626_copy.yml  jobs_032626_site_filter_example.yml  jobs_040226.yml  jobs_040226_copy.yml  jobs_040926.yml  jobs_041626.yml  jobs_042326.yml  jobs_043026.yml  jobs_050726.yml  jobs_051426.yml  jobs_052126.yml  jobs_052826.yml  jobs_060426.yml  jobs_061826.yml  jobs_062526.yml  jobs_070126.yml  jobs_070126_crt_nps.yml  jobs_070926.yml  jobs_071626.yml  jobs_new_format.yml  jobs_smart_offer.yml
configs/archive/: job_example_comparison metric.yml  jobs new.yml  jobs.yml  (+7 more)
docs/: how_to_run_scripts.md
notebooks/: expert_id_comparison.ipynb  run_outlier_pipeline.ipynb  run_outlier_pipeline_with_diagnostics.ipynb
outlier_pipeline.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
sql_templates/: Smart_offer_data.sql  Smart_offer_data_filtered.sql  epm_metric_data_generic.sql  epm_metric_data_generic_filtered.sql  fmip_override.sql  long_call_recording_links.sql  outdial_recording_links.sql  transfer_hangup.sql
src/: __init__.py  cli.py  config_compare.py  engine.py  io_utils.py  logging_config.py  outliers.py  query_params.py  runner - old.py  runner copy.py  runner.py  sql_compiler.py  update_jobs_yml.py  utils - old.py
tests/: conftest.py  test_outliers.py  test_runner_blank_section.py  test_runner_output_shaping.py  test_utils.py
