[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "outlier-pipeline"
version = "0.1.0"
description = "Config-driven outlier pipeline for expert performance metrics"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Nathan Taylor" }]
dependencies = [
  "pandas>=2.0",
  "sqlalchemy>=2.0",
  "PyYAML>=6.0",
  "openpyxl>=3.1",
  "python-dotenv>=1.0",
  "urllib3"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
]

# If your code lives in ./src (as it does), this tells setuptools how to find it.
[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

# Optional: create a CLI command: `outlier-pipeline configs/jobs_new_format.yml`
[project.scripts]
outlier-pipeline = "src.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
